--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,8 @@ mark,
     content: "\2014 \00A0"; }
 
 .img-fluid {
-  max-width: 100%;
+  /* max-width: 100%; */
+  width: 100%;
   height: auto; }
 
 .img-thumbnail {
